manifests/deployment-api.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: chamaalunoapi 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chamaalunoapi
  template:
    metadata:
      labels:
        app: chamaalunoapi 
    spec:
      containers:
        - name: chamaalunoapi 
          image: chamaaluno.azurecr.io/chamaalunoapi
          ports:
          - containerPort: 80
          volumeMounts:
            - mountPath: "/Licenca"
              name: licenca
      volumes:
      - name: licenca
        persistentVolumeClaim:
          claimName: licenca
