manifests/banco.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chamaalunobanco
spec:
  replicas: 2
  selector:
     matchLabels:
       app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      terminationGracePeriodSeconds: 30
      hostname: mssqlinst
      securityContext:
        fsGroup: 10001
        runAsUser: 10001
        runAsGroup: 10001
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssqldb
          mountPath: /var/opt/mssql
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: mssql-data
---
apiVersion: v1
kind: Service
metadata:
  name: chamaalunobanco
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: LoadBalancer
# ---
# kind: NetworkPolicy
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: policy-banco
#   namespace: chamaaluno
# spec:
#   podSelector:
#     matchLabels:
#       app: mssql
#   ingress:
#   - from:
#     - namespaceSelector:
#         matchLabels:
#           purpose: chamaaluno
#       podSelector:
#         matchLabels:
#           app: chamaalunoapi
