manifests/service-api.yml
apiVersion: v1
kind: Service
metadata:
    name: chamaalunoapi
spec:
    type: LoadBalancer
    ports:
    - port: 80 
    selector:
        app: chamaalunoapi
