manifests/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: chamaaluno
  namespace: chamaaluno
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.org/rewrites: "serviceName=chamaalunoapp rewrite=/;serviceName=chamaalunoapi rewrite=/api;serviceName=chamaalunoapi rewrite=/swagger"
    nginx.ingress.kubernetes.io/default-backend: chamaalunoapi
    cert-manager.io/cluster-issuer: tls-secret
    nginx.ingress.kubernetes.io/server-alias: chamaaluno.egasparotto.net
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - egasparotto.net
    - '*.egasparotto.net'
    secretName: tls-secret
  rules:
  - host: egasparotto.net
    http:
      paths:
      - backend:
          serviceName: chamaalunoapi
          servicePort: 80
        path: /api(/|$)(.*)
      - backend:
          serviceName: chamaalunoapi
          servicePort: 80
        path: /swagger(/|$)(.*)
      - backend:
          serviceName: chamaalunoapp
          servicePort: 80
        path: /(.*)
  - host: '*.egasparotto.net'
    http:
      paths:
      - backend:
          serviceName: chamaalunoapi
          servicePort: 80
        path: /api(/|$)(.*)
      - backend:
          serviceName: chamaalunoapi
          servicePort: 80
        path: /swagger(/|$)(.*)
      - backend:
          serviceName: chamaalunoapp
          servicePort: 80
        path: /(.*)
